dhall/tests/type-inference/failure/mixedUnions.txt
Type error: error: InvalidFieldType
 --> <current file>:1:0
  |
1 | < Left : Natural | Right : Type >
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ InvalidFieldType
  |
